refactor (backend): moved logic from OperationController to CachedItemsController
change responses to return CachedItem not Operation
this makes routes a bit more resourceful
